--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/data/
-/logs/
-/models/
-/.ipynb_checkpoints/
-/notebooks/.ipynb_checkpoints/
+data/
+logs/
+models/
+.ipynb_checkpoints/
+notebooks/.ipynb_checkpoints/
